// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LogoAnimator /> animate: true 1`] = `
.c0 {
  -webkit-animation: lcQkPt 2s ease infinite;
  animation: lcQkPt 2s ease infinite;
  height: 20px;
  margin-top: calc(50vh - 98px);
  position: relative;
  -webkit-transition: margin-top 0.6s ease;
  transition: margin-top 0.6s ease;
  width: 20px;
}

<LogoAnimator
  animate={true}
>
  <div
    className="c0"
  />
</LogoAnimator>
`;

exports[`<LogoAnimator /> renders properly 1`] = `
.c0 {
  -webkit-animation: none;
  animation: none;
  height: 20px;
  margin-top: 0;
  position: relative;
  -webkit-transition: margin-top 0.6s ease;
  transition: margin-top 0.6s ease;
  width: 20px;
}

<LogoAnimator>
  <div
    className="c0"
  />
</LogoAnimator>
`;
